--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <a class="navbar-brand" href="#"
           ><img
-            src="../test/images/exp2.png"
+            src="images/exp2.png"
             alt="logo"
             width="50"
             height="50"/>
@@ -29,7 +29,7 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="https://www.facebook.com/touhid.zaman.5268" target="_blank"
               ><img
-                src="../test/images/fb.png"
+                src="images/fb.png"
                 alt="facebook"
                 width="15"
                 height="20"/>
@@ -38,7 +38,7 @@
           <li class="nav-item">
             <a class="nav-link" href="https://instagram.com/touhid_zzzzzz?igshid=YmMyMTA2M2Y=" target="_blank">
               <img
-                src="../test/images/insta.png"
+                src="images/insta.png"
                 alt="instagram"
                 width="20"
                 height="20"/>
@@ -54,7 +54,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false">
                 <img
-                  src="../test/images/ds.png"
+                  src="images/ds.png"
                   alt="discord"
                   width="25"
                   height="25"/>
@@ -65,7 +65,7 @@
             </li>
           </div>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.twitch.tv/ninjamai99" target="_blank"><img src="../test/images/twitch.png" alt="Twitch" width="25" height="25"></a>
+            <a class="nav-link" href="https://www.twitch.tv/ninjamai99" target="_blank"><img src="images/twitch.png" alt="Twitch" width="25" height="25"></a>
           </li>
         </ul>
       </div>
@@ -86,19 +86,19 @@
           <div class="main">
             <div class="games">
               <h2>Apex Legends</h2>
-              <img src="../test/images/apx.png" alt="Apex" width="150" height="150">
+              <img src="images/apx.png" alt="Apex" width="150" height="150">
             </div>
             <div class="games">
               <h2>Shatterline</h2>
-              <img src="../test/images/shtrline.png" alt="Shatterline" width="150" height="150">
+              <img src="images/shtrline.png" alt="Shatterline" width="150" height="150">
             </div>
             <div class="games">
               <h2>gta 5</h2>
-              <img src="../test/images/GTA.png" alt="GtaV" width="150" height="150">
+              <img src="images/GTA.png" alt="GtaV" width="150" height="150">
             </div>
             <div class="games">
               <h2>Overwatch</h2>
-              <img src="../test/images/ovrwatch.png" alt="Overwatch" width="150" height="150">
+              <img src="images/ovrwatch.png" alt="Overwatch" width="150" height="150">
             </div>
           </div>
      </div>
